--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,7 +14,10 @@
         </div>
         <div class="row mt-3">
           <div class="col-md-12 info-text">
-            <p>In these end of the year holidays send a gift to your loved one and share the happiness at Christmas.</p>
+            <p>
+              In these end of the year holidays send a gift to your loved one
+              and share the happiness at Christmas.
+            </p>
           </div>
         </div>
         <div class="row">
@@ -25,7 +28,7 @@
       </div>
       <div class="col-md-6 home-img">
         <img class="img-fluid" src="https://christmas-landing-page-bay.vercel.app/assets/img/home.png
-        " alt="home_img">
+        " alt="home_img" />
       </div>
     </div>
   </div>
